refactor: :recycle: use `TailwindCSS` and add ramdom patches.

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,7 +1,12 @@
----
-title: Home Page
----
+import { Meta } from "./layout";
+import { Helmet } from "react-helmet";
 
-# Hello
+<Meta title="Online Puzzle" />
 
-It's me!
+<Helmet>
+  <title>Online Puzzle</title>
+</Helmet>
+
+> ./index.mdx
+
+`Hello world.`
